--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <div class="project-content">
                     <h3 class="project-title">⚡ Projekt 1 ⚡</h3>
                     <p class="project-description">
-                        Interaktive Webseite mit modernem Neon-Design und dynamischen LED-Effekten
+                        Interaktive Webseite mit modernem Rust Cheats und Updates
                     </p>
                     <a href="HTML1.html" class="project-link">Ansehen →</a>
                 </div>
